# Multi-app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: smoke-matrix.md
docs/plans/: 2026-06-23-001-feat-multi-session-browser-plan.md
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  model.rs  nav_guard.rs  paths.rs  store.rs  webview_manager.rs
src/components/: ConfirmModal.tsx  Favicon.tsx  IconPicker.tsx  InstanceIcon.tsx  Sidebar.tsx  SidebarNode.tsx  TopTabs.tsx  Viewport.tsx  icons.ts
src/ipc/: commands.ts  events.ts
src/state/: store.ts
